# webrtc.duxca.com

./: .dockerignore  .env  .gitignore  AGENT.md  Cargo.toml  Dockerfile  Makefile  README.md  deploy.bash  run_local.bash
.github/workflows/: check.yml  deploy.yml  rust.yml
src/: auth.rs  main.rs  web.rs
src/web/: login.rs  mod.rs
terraform_bootstrap/: README.md  main.tf  outputs.tf  prod.tfvars  variables.tf  versions.tf
terraform_bootstrap/bootstrap/: main.tf  prod.tfvars  variables.tf  versions.tf
terraform_cf/: .terraform.lock.hcl  README.md  main.tf  prod.tfvars  variables.tf  versions.tf
terraform_gcp_app/: README.md  data.tf  main.tf  outputs.tf  prod.tfvars  variables.tf  versions.tf
terraform_gcp_storage/: README.md  artifact_registry.tf  main.tf  outputs.tf  prod.tfvars  secrets.tf  service_account.tf  variables.tf  versions.tf
