[package]
edition = "2021"
name = "server"
resolver = "2"
version = "0.1.0"

[features]
local = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-login = "0.15"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15"
env_logger = "0.11.5"
envy = "0.4.2"
futures = "0.3.30"
log = "0.4.22"
oauth2 = "4.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shadow-rs = "0.33.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "compression-zstd", "cors", "fs"] }
tower-sessions = { version = "0.12.2", features = ["signed"] }
tracing = "0.1"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "time", "local-time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
shadow-rs = "0.33.0"
